@@ -1,35 +1,57 @@
 package org.flickit.flickitassessmentcore.adapter.out.persistence.assessment;
 
 import lombok.RequiredArgsConstructor;
+import org.flickit.flickitassessmentcore.application.port.in.assessment.GetAssessmentListUseCase.AssessmentListItem;
 import org.flickit.flickitassessmentcore.application.port.out.assessment.CreateAssessmentPort;
-import org.flickit.flickitassessmentcore.application.port.out.assessment.LoadAssessmentBySpacePort;
-import org.flickit.flickitassessmentcore.domain.Assessment;
+import org.flickit.flickitassessmentcore.application.port.out.assessment.LoadAssessmentListItemsBySpacePort;
+import org.flickit.flickitassessmentcore.application.port.out.assessment.UpdateAssessmentPort;
+import org.flickit.flickitassessmentcore.application.domain.crud.PaginatedResponse;
 import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Component;
 
-import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Component
 @RequiredArgsConstructor
 public class AssessmentPersistenceJpaAdaptor implements
     CreateAssessmentPort,
-    LoadAssessmentBySpacePort {
+    LoadAssessmentListItemsBySpacePort,
+    UpdateAssessmentPort {
 
     private final AssessmentJpaRepository repository;
 
     @Override
-    public UUID persist(Param param) {
+    public UUID persist(CreateAssessmentPort.Param param) {
         AssessmentJpaEntity unsavedEntity = AssessmentMapper.mapCreateParamToJpaEntity(param);
         AssessmentJpaEntity entity = repository.save(unsavedEntity);
         return entity.getId();
     }
 
     @Override
-    public List<Assessment> loadAssessmentBySpaceId(Long spaceId, int page, int size) {
-        return repository.findBySpaceIdOrderByLastModificationDateDesc(spaceId, PageRequest.of(page, size)).stream()
-            .map(AssessmentMapper::mapToDomainModel)
-            .collect(Collectors.toList());
+    public PaginatedResponse<AssessmentListItem> loadAssessments(Long spaceId, int page, int size) {
+        var pageResult = repository.findBySpaceIdOrderByLastModificationTimeDesc(spaceId, PageRequest.of(page, size));
+        var items = pageResult.getContent().stream()
+            .map(AssessmentMapper::mapToAssessmentListItem)
+            .toList();
+        return new PaginatedResponse<>(
+            items,
+            pageResult.getNumber(),
+            pageResult.getSize(),
+            AssessmentJpaEntity.Fields.LAST_MODIFICATION_TIME,
+            Sort.Direction.DESC.name().toLowerCase(),
+            (int) pageResult.getTotalElements()
+        );
+    }
+
+    @Override
+    public UpdateAssessmentPort.Result update(UpdateAssessmentPort.Param param) {
+        repository.update(
+            param.id(),
+            param.title(),
+            param.code(),
+            param.colorId(),
+            param.lastModificationTime());
+        return new UpdateAssessmentPort.Result(param.id());
     }
 }
